src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agent_Broker_Commision__c</fullName>
        <label>Agent/Broker Commision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Company_Registration_Number__c</fullName>
        <label>Company Registration Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_status__c</fullName>
        <description>This is a customer status</description>
        <inlineHelpText>Select a status if the customer collections is affected</inlineHelpText>
        <label>Customer status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Query</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Insolvency</fullName>
                </value>
                <value>
                    <fullName>Deal</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Payment Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registered_Name__c</fullName>
        <label>Registered Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AssetQuantitiesCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</description>
        <inlineHelpText>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</inlineHelpText>
        <label>Combine Asset Quantities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTermedContractsCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that controls whether assets and subscriptions from multiple co-teremed contracts are rolled up together. By default, each co-termed contract generates a separate group on renewal quote.</description>
        <inlineHelpText>Enable to combine assets and subscriptions from multiple co-termed contracts. By default, each co-termed contract generates a separate group on renewal quote.</inlineHelpText>
        <label>Combine Co-Termed Contracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTerminationEvent__c</fullName>
        <description>Determines when contracts are co-terminated.</description>
        <inlineHelpText>Determines when contracts are co-terminated.</inlineHelpText>
        <label>Co-Termination Event</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__ContractCoTermination__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Add-on</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ContractCoTermination__c</fullName>
        <description>Determines how service and subscription contracts for this customer are co-terminated.</description>
        <inlineHelpText>Determines how service and subscription contracts for this customer are co-terminated.</inlineHelpText>
        <label>Contract Co-Termination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                    <default>true</default>
                    <label>Never</label>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Prompt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</description>
        <inlineHelpText>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</inlineHelpText>
        <label>Default Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>WebAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__IgnoreParentContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if contracted prices should not be inherited from the parent account.</description>
        <inlineHelpText>Select if contracted prices should not be inherited from the parent account.</inlineHelpText>
        <label>Ignore Parent Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PreserveBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to maintain bundle hierarchy on renewal quotes and amendments</description>
        <inlineHelpText>Select checkbox to maintain bundle hierarchy on renewal quotes and amendments.</inlineHelpText>
        <label>Preserve Bundle Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceHoldEnd__c</fullName>
        <description>End date for any price hold that may be in effect.</description>
        <inlineHelpText>Enter date until which the prices must be held.</inlineHelpText>
        <label>Price Hold End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalModel__c</fullName>
        <description>The option to distinguish between Subscription or Asset based renewal.</description>
        <inlineHelpText>Choose Asset Based to make renewals based off of an account&apos;s Assets or choose Subscription based to makes renewals based off of subscriptions created from a quote.</inlineHelpText>
        <label>Renewal Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Based</fullName>
                </value>
                <value>
                    <fullName>Contract Based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalPricingMethod__c</fullName>
        <description>Method for pricing products on renewal.</description>
        <inlineHelpText>Use &quot;Same&quot; to keep the same price paid last time. Use &quot;List&quot; to use current list price. Use &quot;Uplift&quot; to use the price paid last time plus some uplift.</inlineHelpText>
        <label>Renewal Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same</fullName>
                    <default>true</default>
                    <label>Same</label>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Uplift</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TaxExempt__c</fullName>
        <description>Selected if this account has active certificates</description>
        <inlineHelpText>Selected if this account has active certificates</inlineHelpText>
        <label>Tax-Exempt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data/Voice</fullName>
                </value>
                <value>
                    <fullName>Furniture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODAAccountTradingCurrency__c</fullName>
        <label>Account Trading Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAAccountsPayableControl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A vendor must refer to a GLA for it to be used in making a posting. This association is inherited from the Accounting Dimension.</description>
        <label>Accounts Payable Control</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Accounts (Accounts Payable Control Account)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAAccountsReceivableControl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>An appropriate accounts receivable (or trade debtors) general ledger account.</description>
        <label>Accounts Receivable Control</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAAllowDeleteInUse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Deletion of Account in Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankAccountName__c</fullName>
        <description>The name of the bank account</description>
        <label>Bank Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankAccountNumber__c</fullName>
        <description>The account number</description>
        <label>Bank Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankAccountReference__c</fullName>
        <description>The account reference, sometimes required for electronic transfers</description>
        <label>Bank Account Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankCity__c</fullName>
        <description>The city</description>
        <label>Bank City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankCountry__c</fullName>
        <description>The country</description>
        <label>Bank Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankFax__c</fullName>
        <description>The fax number</description>
        <label>Bank Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankIBANNumber__c</fullName>
        <description>The IBAN number</description>
        <label>Bank IBAN Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankName__c</fullName>
        <description>The name of the bank</description>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankPhone__c</fullName>
        <description>The bank phone number</description>
        <label>Bank Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankSWIFTNumber__c</fullName>
        <description>The SWIFT or similar number</description>
        <label>Bank SWIFT Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankSortCode__c</fullName>
        <description>The sort code / bank identifier</description>
        <label>Bank Sort Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankStateProvince__c</fullName>
        <description>The state / county / province</description>
        <label>Bank State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankStreet__c</fullName>
        <label>Bank Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankZipPostalCode__c</fullName>
        <description>The postal code</description>
        <label>Bank Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABaseDate1__c</fullName>
        <description>The date on which terms will be calculated.</description>
        <label>Base Date 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>End of Next Month</fullName>
                </value>
                <value>
                    <fullName>Invoice Date</fullName>
                </value>
                <value>
                    <fullName>Start of Next Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODABaseDate2__c</fullName>
        <description>The date on which terms will be calculated</description>
        <label>Base Date 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>End of Next Month</fullName>
                </value>
                <value>
                    <fullName>Invoice Date</fullName>
                </value>
                <value>
                    <fullName>Start of Next Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODABaseDate3__c</fullName>
        <description>The date on which terms will be calculated</description>
        <label>Base Date 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>End of Next Month</fullName>
                </value>
                <value>
                    <fullName>Invoice Date</fullName>
                </value>
                <value>
                    <fullName>Start of Next Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODABillingAddressIsValid__c</fullName>
        <formula>NOT(ISBLANK(BillingStreet) &amp;&amp;
ISBLANK(BillingCity) &amp;&amp;
ISBLANK(BillingState) &amp;&amp;
ISBLANK(BillingPostalCode) &amp;&amp;
ISBLANK(BillingCountry)) &amp;&amp;
c2g__CODAValidatedBillingStreet__c == BillingStreet &amp;&amp;
c2g__CODAValidatedBillingCity__c == BillingCity &amp;&amp;
c2g__CODAValidatedBillingState__c == BillingState &amp;&amp;
c2g__CODAValidatedBillingPostCode__c == BillingPostalCode &amp;&amp;
c2g__CODAValidatedBillingCountry__c == BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODABillingMethod__c</fullName>
        <description>The billing method</description>
        <label>Billing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Electronic</fullName>
                </value>
                <value>
                    <fullName>Paper</fullName>
                </value>
                <value>
                    <fullName>Self-billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODACreditAgency__c</fullName>
        <description>The name of the credit agency</description>
        <label>Credit Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditLimitEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to enable the credit limit</description>
        <label>Credit Limit Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditLimitReviewed__c</fullName>
        <description>The date when the limit was last reviewed</description>
        <label>Credit Limit Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditLimit__c</fullName>
        <description>The credit limit in org currency</description>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The manager responsible for the credit details</description>
        <label>Credit Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditRatingReviewed__c</fullName>
        <description>The date the rating was last reviewed</description>
        <label>Credit Rating Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditRating__c</fullName>
        <description>The rating given by the credit agency</description>
        <label>Credit Rating</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditReference__c</fullName>
        <description>The reference at the credit agency</description>
        <label>Credit Reference</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditStatus__c</fullName>
        <description>The current credit status. The picklist is user-definable</description>
        <label>Credit Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Allowed</fullName>
                    <default>true</default>
                    <label>Credit Allowed</label>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Cash with Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODADaysOffset1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of days to add to the base date</description>
        <label>Days Offset 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADaysOffset2__c</fullName>
        <description>The number of days to add to the base date</description>
        <label>Days Offset 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADaysOffset3__c</fullName>
        <description>The number of days to add to the base date</description>
        <label>Days Offset 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADefaultExpenseAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The default GLA on expense lines.</description>
        <label>Default Expense Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Accounts (Default Expense Account)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODADescription1__c</fullName>
        <description>The description of the settlement terms</description>
        <label>Description 1</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODADescription2__c</fullName>
        <description>The description of the settlement terms</description>
        <label>Description 2</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODADescription3__c</fullName>
        <description>The description of the settlement terms</description>
        <label>Description 3</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODADimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODADimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODADimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODADiscount1__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The amount of discount to be applied</description>
        <label>Discount 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADiscount2__c</fullName>
        <description>The amount of discount to be applied</description>
        <label>Discount 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODADiscount3__c</fullName>
        <description>The amount of discount to be applied</description>
        <label>Discount 3</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODAECCountryCode__c</fullName>
        <label>Tax Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>CY</fullName>
                </value>
                <value>
                    <fullName>CZ</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DK</fullName>
                </value>
                <value>
                    <fullName>EE</fullName>
                </value>
                <value>
                    <fullName>EL</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>GB</fullName>
                </value>
                <value>
                    <fullName>GR</fullName>
                </value>
                <value>
                    <fullName>HK</fullName>
                </value>
                <value>
                    <fullName>HU</fullName>
                </value>
                <value>
                    <fullName>IE</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>LT</fullName>
                </value>
                <value>
                    <fullName>LU</fullName>
                </value>
                <value>
                    <fullName>LV</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>MY</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>NZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODAEntityUseCode__c</fullName>
        <label>Entity / Use Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A - Federal government - United States</fullName>
                </value>
                <value>
                    <fullName>B - State government - United States</fullName>
                </value>
                <value>
                    <fullName>C - Tribe / Status Indian / Indian Band - both</fullName>
                </value>
                <value>
                    <fullName>D - Foreign diplomat - both</fullName>
                </value>
                <value>
                    <fullName>E - Charitable or benevolent org - both</fullName>
                </value>
                <value>
                    <fullName>F - Religious or educational org - both</fullName>
                </value>
                <value>
                    <fullName>G - Resale - both</fullName>
                </value>
                <value>
                    <fullName>H - Commercial agricultural production - both</fullName>
                </value>
                <value>
                    <fullName>I - Industrial production / manufacturer - both</fullName>
                </value>
                <value>
                    <fullName>J - Direct pay permit - United States</fullName>
                </value>
                <value>
                    <fullName>K - Direct mail - United States</fullName>
                </value>
                <value>
                    <fullName>L - Other - both</fullName>
                </value>
                <value>
                    <fullName>N - Local government - United States</fullName>
                </value>
                <value>
                    <fullName>P - Commercial aquaculture - Canada</fullName>
                </value>
                <value>
                    <fullName>Q - Commercial Fishery - Canada</fullName>
                </value>
                <value>
                    <fullName>R - Non-resident - Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODAExemptionCertificate__c</fullName>
        <label>Exemption Certificate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__CODAFederallyReportable1099__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Federally Reportable 1099</description>
        <label>Federally Reportable 1099</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODAFinanceContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAIncomeTaxType__c</fullName>
        <description>Income Tax Type</description>
        <label>Income Tax Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Rents</fullName>
                </value>
                <value>
                    <fullName>2 - Royalties</fullName>
                </value>
                <value>
                    <fullName>3 - Other Income</fullName>
                </value>
                <value>
                    <fullName>4 - Federal Income Tax Withheld</fullName>
                </value>
                <value>
                    <fullName>5 - Fishing Boat Proceeds</fullName>
                </value>
                <value>
                    <fullName>6 - Medical and Healthcare Payments</fullName>
                </value>
                <value>
                    <fullName>7 - Nonemployee Compensation</fullName>
                </value>
                <value>
                    <fullName>8 - Substitute Payments in Lieu of Dividends or Interest</fullName>
                </value>
                <value>
                    <fullName>9 - Payer Made Direct Sales of 5000 or More</fullName>
                </value>
                <value>
                    <fullName>10 - Crop Insurance Proceeds</fullName>
                </value>
                <value>
                    <fullName>11 - Unused 11</fullName>
                </value>
                <value>
                    <fullName>12 - Unused 12</fullName>
                </value>
                <value>
                    <fullName>13 - Excess Golden Parachute Payments</fullName>
                </value>
                <value>
                    <fullName>14 - Gross Proceeds Paid to an Attorney</fullName>
                </value>
                <value>
                    <fullName>Not Reportable</fullName>
                    <default>true</default>
                    <label>Not Reportable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODAInputVATCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Input VAT/GST Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Input VAT/GST Code)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>